fixing overflowing titles in rollover boxes

--- a/extension/contentScripts/mail/css/mail.less
+++ b/extension/contentScripts/mail/css/mail.less
@@ -804,8 +804,9 @@ line-height: 16px;
   color: @black;
   font-size: 16px;
   margin-bottom: 10px;
-
-
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .rollover-title a {
